# xapian-rusty

./: Cargo.toml  README.md  build.rs  lib.rs  xapian-bind.cc  xapian-bind.h
include/xapian/: enquire.h  error.h  errordispatch.h  mset.h  version.h
src/: lib.rs  lib.rs.cc  lib.rs.h  xapian-bind.h
src/xapian/: error.h  version.h
xapian-patch/api/: omenquire.cc
