[package]
name = "xapian-rusty"
version = "0.1.3"
edition = "2018"
description = "Rust bindings to Xapian"
readme = "README.md"
authors = ["Valeriy Bushenev <ValeriyBushenev@gmail.com>"]
license = "MIT"
links = "xapian-rusty"

[lib]
path = "src/lib.rs"

[dependencies]
cxx = "1.0.2"

[build-dependencies]
cxx-build = "1.0.2"
