[package]
name = "xapian-rusty"
version = "0.0.52"
edition = "2018"
description = "Rust bindings to Xapian"
readme = "README.md"
authors = ["Valeriy Bushenev <ValeriyBushenev@gmail.com>", "David Tolnay <dtolnay@gmail.com>"]
license = "MIT"
links = "xapian-rusty"

[lib]
path = "src/lib.rs"

[dependencies]
cxx = "=1.0.89"

[build-dependencies]
cxx-build = "=1.0.89"
